--- a/client/src/pages/Admin/users.css
+++ b/client/src/pages/Admin/users.css
@@ -9,8 +9,8 @@
     margin: 20px;
     text-align: left;
     background-color:white;
-    border-radius: 12px;
-    box-shadow: 0 0 3px rgba(8, 7, 16, 0.6);
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     transition: 0.5s;
     cursor: pointer;
 }
