add context for state mangmenr

--- a/client/src/pages/Admin/users.css
+++ b/client/src/pages/Admin/users.css
@@ -5,6 +5,15 @@
     flex-wrap: wrap;
 }
 
+.addNewUserBtn {
+    color: white;
+    position: fixed;
+    top: 2%;
+    right: 4%;
+    background-color: black;
+    width: 300px;
+}
+
 .user {
     margin: 20px;
     text-align: left;
