--- a/client/src/components/navbar/navBar.css
+++ b/client/src/components/navbar/navBar.css
@@ -1,7 +1,10 @@
 .navbar {
     background-color: #333;
     color: #fff;
-    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    
   }
   
   .container {
