edit file profile and add 2 function get and update user

--- a/client/src/components/navbar/navBar.css
+++ b/client/src/components/navbar/navBar.css
@@ -4,10 +4,12 @@
     position: fixed;
     width: 100%;
     top: 0;
+    padding: 24px;
+    justify-content: center;
     
   }
   
-  .container {
+  .navbar .container-user-navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
