--- a/client/src/pages/Client/chatclient.css
+++ b/client/src/pages/Client/chatclient.css
@@ -16,7 +16,7 @@
 .chatbox__support {
     display: flex;
     flex-direction: column;
-    background: #a14444;
+    background: #447ca1;
     width: 300px;
     height: 350px;
     z-index: -123456;
@@ -76,7 +76,7 @@
 }
 
 .chatbox__support {
-    background: #a83333;
+    background: #336aa8;
     height: 450px;
     width: 350px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
