--- a/client/src/pages/Client/profile.css
+++ b/client/src/pages/Client/profile.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 1rem;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 100px auto;
   }
   
   .update-form label {
